--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Spec A System{% endblock %}</title>
+
+    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -82,7 +85,7 @@
                 </div>
             </div>
             <div class="col-12">
-                <div class="my-bg-secondary border-bottom border-primary py-2 px-3">
+                <div class="my-bg-secondary border-bottom border-primary py-0 px-3">
                     {% for message in messages %}
                     <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
                         {{ message|safe }}
@@ -93,19 +96,6 @@
             </div>
         </div>
     </div>
-
-    <!-- <div class="container">
-        <div class="row">
-            <div class="col-md-6 offset-md-2">
-                {% for message in messages %}
-                <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
-                    {{ message | safe }}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-                {% endfor %}
-            </div>
-        </div>
-    </div> -->
 
     <div class="bg-main-image">
         <!-- Main Content -->
